# blizzard-api-rs

./: Cargo.toml  README.md
src/: battle_net.rs  lib.rs  wow.rs
src/battle_net/: oauth_token.rs
src/wow/: character_equipment.rs  character_media.rs  character_profile.rs  character_statistics.rs  commons.rs  retail.rs
src/wow/commons/: media.rs  stats.rs  types.rs
src/wow/retail/: character.rs  equipment.rs  statistics.rs
