[package]
name = "blizzard-api-rs"
version = "0.2.5"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "^0.13", features = ["json", "multipart", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
