[package]
name = "blizzard-api-rs"
version = "0.3.0"
authors = ["SlackMagiC <laurent.pietrzyk@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.13.1", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.149"

# TO REMOVE LATER
#tokio = { version = "1.49.0", features = ["full"] }
